Ensures that drop-downs are not hidden by iframes and embeds.
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40604

--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -27,6 +27,7 @@
     padding:0;
     border:0;
     width: auto;
+    z-index: 100;
 }
 
 .css-menu a {
